# Phois

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/phois/: __init__.py  errors.py  tlds.json
src/pois/: __init__.py  tlds.json
tests/: test_phois.py  test_pois.py  test_socketpipeline.py  test_url.py
tests/artifacts/: github.com_registrar.txt  github.com_registry.txt  idn.txt  invalid_domain.txt  invalid_tld.txt  non_utf8.txt  tld_guru.txt
tests/integration/: test_phois.py  test_socketpipeline.py
tests/unit/: test_phois.py  test_url.py
