[project]
name = "Pois"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mirhossein Mousavi", email = "mr.mousavi@live.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "pysocks>=1.7.1",
    "tldextract>=5.3.1",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
